# FlySearch

./: .env  .env-example  .gitignore  CHANGELOG.md  LICENSE  README.md  drone.py  drone.sh  drone2.py  drone_test.py  flysearch.py  locations_city.csv  locations_city.csv.REMOVED.git-id  mkdocs.yml  object_id_getter.py  pyproject.toml  requirements.txt  vstar.py  vstar.sh
all_logs/: download.sh
analysis/: __init__.py  criterion_plotter.py  failure_cause_owl.py  maciek_criterion.py  plot.ipynb  plot.py  plot_timeseries.py  print_accuracies.py  print_accuracies_by_altitude.py  results.py  run.py  run_analyser.py  run_visualiser.py  test_run.py  test_run_analyser.py  to_pandas.py  to_raw_data.py  utils.py  where_it_ended.py
arg_resolvers/: __init__.py  agent_factory_resolver.py  base_arg_resolver.py  bus.py  conversation_factory_resolver.py  logger_factory_resolver.py  runner_resolver.py  scenario_arg_resolver.py
conversation/: __init__.py  anthropic_conversation.py  anthropic_factory.py  conversations.py  gemini_conversation.py  gemini_factory.py  gpt_factory.py  intern_factory.py  llava_conversation.py  openai_conversation.py  vllm_factory.py
data/: data_source.md
datasets/: vstar_bench_dataset.py
docs/: CNAME  index.md  main.py
examples/: create_new.sh  mimic.sh
explorers/: __init__.py  drone_explorer.py  naive_vstar_explorer.py  visual_vstar_explorer.py  vstar_owl_explorer.py
glimpse_generators/: __init__.py  image_glimpse_generator.py  test_unreal_image_generator.py  unreal_client_wrapper.py  unreal_glimpse_generator.py  unreal_guardian.py  (+1 more)
web/: app.py  (+6 more)
(+61662 files in other folders)
